# Coral-SAAS

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  railway.toml
.github/workflows/: ci.yml  deploy.yml
api/: Cargo.toml  Dockerfile
api/src/: audit.rs  config.rs  error.rs  idempotency.rs  main.rs  state.rs
api/src/auth/: csrf.rs  github_oauth.rs  mod.rs  session.rs
api/src/db/: mod.rs
api/src/db/models/: github_installation.rs  job.rs  mod.rs  repo.rs  session.rs  tenant.rs  tenant_member.rs  user.rs
api/src/github_app/: installation_token.rs  jwt.rs  mod.rs  webhook.rs
api/src/jobs/: mod.rs
api/src/middleware/: request_id.rs
api/src/r2/: mod.rs
api/src/routes/: auth.rs  github_install.rs  github_webhook.rs  health.rs  jobs.rs  me.rs  mod.rs  repos.rs  stripe_webhook.rs  wiki.rs
api/src/stripe/: mod.rs  webhook.rs
api/src/wiki/: mod.rs  render.rs
docs/: NEXT-SESSION.md  SAAS-PLAN-GAPS.md  SAAS-PLAN.md  STATUS.md
migrations/: .gitkeep  0001_init.sql
shared/: Cargo.toml
shared/src/: lib.rs
web/: .npmrc  Dockerfile  next.config.mjs  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/(dashboard)/: layout.tsx  page.tsx
web/src/app/(dashboard)/repos/: page.tsx
web/src/app/(dashboard)/repos/[id]/: page.tsx
web/src/app/(dashboard)/repos/[id]/[slug]/: page.tsx
web/src/app/api/health/: route.ts
web/src/app/login/: page.tsx
web/src/components/: sidebar.tsx  topbar.tsx
web/src/lib/: api-client.ts  api.ts  queries.ts  store.ts
worker/: Cargo.toml  Dockerfile
worker/src/: coral_runner.rs  main.rs
