[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-cookies.workspace = true
hyper.workspace = true
url.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
uuid.workspace = true
time.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
subtle.workspace = true
rand.workspace = true
base64.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-credential-types.workspace = true
pulldown-cmark.workspace = true
ammonia.workspace = true
config.workspace = true
dotenvy.workspace = true
shared.workspace = true
