[package]
name = "worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
redis.workspace = true
sqlx.workspace = true
uuid.workspace = true
time.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
config.workspace = true
dotenvy.workspace = true
shared.workspace = true
